--- a/MonitoringTool/MonitoringTool/style.css
+++ b/MonitoringTool/MonitoringTool/style.css
@@ -1,20 +1,18 @@
 		#rootDiv0 {
-		background-color: #55c51b;
+		position: relative;
+		margin-left: 7px;
 		}
 		#childDiv0 {
 		position: relative;
 		margin-left: 30px;
-		background-color: #c5b31b;
 		}
 		#childDiv1 {
 		position: relative;
 		margin-left: 30px;
-		background-color: #a5b31b;
 		}
 		#childDiv2 {
 		position: relative;
 		margin-left: 30px;
-		background-color: #b5b31b;
 		}
 		#map-canvas {
         height: 100%;
